--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello, World!</p>
+    <p>Hello, World!awdawdasd</p>
 
     <script src="js/script.js"></script>
 </body>
