--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello, World!awdawdasd</p>
-
+    <h1>gilly!</h1>
+    <p>Hello, World!</p>
     <script src="js/script.js"></script>
 </body>
 </html>
