--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>gilly!</h1>
     <p>Hello, World!</p>
+    <h3>prosto tak</h3>
     <script src="js/script.js"></script>
 </body>
 </html>
