--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>gilly!</h1>
-    <p>Hello, World!</p>
-    <h3>prosto tak</h3>
+    <h1>Hello world!</h1>
     <script src="js/script.js"></script>
 </body>
 </html>
